--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -50,3 +50,6 @@ linter:
     # Performance
     - avoid_function_literals_in_foreach_calls
     - prefer_foreach
+
+formatter:
+  trailing_commas: preserve
